Revert "use stream's toList() method"
This reverts commit 4f5bc5076222064a0e0ca2561f3b8e036c41e2dd.