@@ -1,6 +1,7 @@
 package coach.xfitness.data;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import javax.persistence.EntityManager;
 import javax.persistence.Query;
@@ -18,8 +19,8 @@ public class MuscleDB {
 
     public static List<String> fetchNamesList() {
         return MuscleDB.selectAll().stream()
-                .map(Muscle::getName)
-                .toList();
+            .map(Muscle::getName)
+            .collect(Collectors.toList());
     }
 
 }
